--- a/app/styles/app/mixins.scss
+++ b/app/styles/app/mixins.scss
@@ -49,7 +49,7 @@
 @mixin colorFadeOut($status, $color) {
   @media #{$medium-up} {
     &.#{$status}:hover {
-      .job-title,
+      .job-name,
       .job-lang,
       .job-env {
         &:after {
@@ -57,7 +57,7 @@
         }
       }
 
-      .job-title:hover,
+      .job-name:hover,
       .job-lang:hover,
       .job-env:hover {
         overflow: visible;
