--- a/app/templates/components/jobs-item.hbs
+++ b/app/templates/components/jobs-item.hbs
@@ -13,9 +13,9 @@
     {{svg-jar osIcon class='icon'}}
   </div>
 
-{{#if title}}
-  <div class="job-title">
-    <span class="label-align" aria-label="Title">{{title}}</span>
+{{#if name}}
+  <div class="job-name">
+    <span class="label-align" aria-label="Title">{{name}}</span>
   </div>
 {{else}}
   <div class="job-lang">
